button double tap zoom on ios fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,3 +6,5 @@
     background-color: #ffc107;
     color: black;
 }
+
+button { touch-action: manipulation; }
